--- a/css/index.css
+++ b/css/index.css
@@ -391,3 +391,26 @@ nav .nav-links ul li a:hover {
     width: 70%;
   }
 }
+.projects {
+  padding: 3%;
+  display: flex;
+  flex-flow: column;
+}
+.projects h3 {
+  font-size: 2.5rem;
+}
+.projects ul {
+  list-style: none;
+}
+.projects ul li {
+  margin-top: 0.5rem;
+}
+.projects ul li a {
+  padding-left: 1.6rem;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #212529;
+}
+.projects ul li a:hover {
+  color: #9ba5ae;
+}
