--- a/css/index.css
+++ b/css/index.css
@@ -134,14 +134,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Coming Soon', cursive;
+  font-family: 'Righteous', cursive;
 }
 h1 {
   font-size: 4rem;
@@ -171,11 +171,11 @@ img {
 nav {
   height: 8rem;
   padding: 2rem;
-  background-color: #FFFFFF;
-  background-image: radial-gradient(#99cccc, #99cccc, #99cccc, #9cccaa);
+  background-color: #ffffff;
+  background-image: radial-gradient(farthest-corner at 0px 40px, #d4f8e8 10%, #1eb2a6 100%);
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid #C0C0C0;
+  border-bottom: 2px solid #c0c0c0;
 }
 @media only screen and (max-width:600px) {
   nav {
@@ -190,7 +190,7 @@ nav .nav-links {
   justify-content: space-between;
 }
 nav .nav-links .logo {
-  font-size: 2.5rem;
+  font-size: 1rem;
 }
 @media only screen and (max-width:600px) {
   nav .nav-links {
@@ -209,16 +209,16 @@ nav .nav-links ul li {
 }
 nav .nav-links ul li a {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.8rem;
   padding-left: 4rem;
-  color: #212529;
+  color: #253608;
 }
 nav .nav-links ul li a:hover {
-  color: #9ba5ae;
+  color: #070a01;
 }
 .home .about {
   padding-top: 30px;
-  border-top: 2px solid #C0C0C0;
+  border-top: 2px solid #c0c0c0;
 }
 .home .about .photo {
   display: flex;
@@ -267,7 +267,7 @@ nav .nav-links ul li a:hover {
 .footer {
   width: 100%;
   border-top: 2px solid silver;
-  background-image: radial-gradient(#99cccc, #99cccc, #99cccc, #9cccaa);
+  background-image: radial-gradient(farthest-corner at 0px 40px, #d4f8e8 10%, #1eb2a6 100%);
 }
 .footer p {
   text-align: center;
@@ -322,7 +322,7 @@ nav .nav-links ul li a:hover {
 }
 .home .inverse-content {
   padding-bottom: 30px;
-  border-bottom: 2px solid #C0C0C0;
+  border-bottom: 2px solid #c0c0c0;
 }
 @media only screen and (max-width:600px) {
   .home .inverse-content {
@@ -350,13 +350,13 @@ nav .nav-links ul li a:hover {
   width: 50%;
   height: 4rem;
   padding: 1.25rem;
-  background-color: #17A2B8;
+  background-color: #17a2b8;
   font-size: 1.8rem;
   border-radius: 1rem;
   display: flex;
   justify-content: center;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .home .content-signmeup .btn:hover {
   background-color: #36cee6;
@@ -371,7 +371,7 @@ nav .nav-links ul li a:hover {
 }
 .home .content-pick {
   padding-top: 30px;
-  border-top: 2px solid #C0C0C0;
+  border-top: 2px solid #c0c0c0;
   display: flex;
   justify-content: space-around;
 }
@@ -409,8 +409,8 @@ nav .nav-links ul li a:hover {
   padding-left: 1.6rem;
   text-decoration: none;
   font-size: 1.6rem;
-  color: #212529;
+  color: #253608;
 }
 .projects ul li a:hover {
-  color: #9ba5ae;
+  color: #b1e657;
 }
