--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,7 +17,7 @@ nav {
         flex-wrap: nowrap;
         justify-content: space-between;
         .logo {
-            font-size: 2.5rem;
+            font-size: 1rem;
         }
         @media @mobile {
             flex-flow: column;
@@ -33,12 +33,12 @@ nav {
                 margin-top: 1rem;
                 a { 
                     text-decoration: none;  
-                    font-size: 2rem;
+                    font-size: 1.8rem;
                     padding-left: 4rem;
                     color: @link-color;
 
                     &:hover {
-                        color: lighten(@link-color, 50%);
+                        color: darken(@link-color, 10%);
                         
                     }
                 }
