--- a/Sprint-Challenge--Advanced-CSS-elijah-atkins/less/global.less
+++ b/Sprint-Challenge--Advanced-CSS-elijah-atkins/less/global.less
@@ -1,3 +1,4 @@
+// General Styles
 * {
   box-sizing: border-box;
 }
@@ -8,39 +9,30 @@ html {
 
 html, body {
   font-family: 'Ubuntu', sans-serif;
+  color: @main-font-color;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Abril Fatface', cursive;
-}
-
-h1 {
-  font-size: 4rem;
+  font-family: 'Russo One', sans-serif;
+  color: @header-font-color;
 }
 
 h2 {
   font-size: 3.2rem;
-  padding-bottom: 10px;
 }
 
-h4 {
-  font-size: 2.5rem;
-  padding-bottom: 10px;
+h3 {
+  font-size: 2.8rem;
 }
 
 p {
-  line-height: 1.5;
   font-size: 1.6rem;
-  padding-bottom: 10px;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
+  line-height: 1.4;
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto;  
 }
+
