--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,7 +17,9 @@ nav {
         flex-wrap: nowrap;
         justify-content: space-between;
         .logo {
-            font-size: 1rem;
+            h1{
+                font-size: 3.2rem;
+            }
         }
         @media @mobile {
             flex-flow: column;
@@ -38,7 +40,7 @@ nav {
                     color: @link-color;
 
                     &:hover {
-                        color: darken(@link-color, 10%);
+                        color: lighten(@link-color, 20%);
                         
                     }
                 }
