--- a/less/index.less
+++ b/less/index.less
@@ -5,7 +5,9 @@
 @import "global";
 
 @import "navigation";
-@import "aboutus";
+@import "about";
 @import "footer";
 @import "home-page";
 @import "projects";
+@import "skills";
+
