--- a/less/variables.less
+++ b/less/variables.less
@@ -17,7 +17,8 @@
 @sandy-beach: #FFEBCD;
 @orange: #ffa34d;
 @red: #f67575;
-@light: #d4f8e8;
+@light: #d4d8a8;
+@mid: #738156;
 @dark: #1eb2a6;
 @darkgreen: #253608;
 
@@ -29,4 +30,4 @@
 //background images
 //@grad: radial-gradient(#99cccc 65%,#9cccaa 100%);
 
-@grad: radial-gradient(farthest-corner at 0px 40px,@light 10%, @dark 100%);
+@grad: radial-gradient(farthest-corner at 0px 40px,@light 10%, @mid 100%);
