--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,12 @@
 .home {
   .header{
-
+    display: flex;
+    justify-content: center;
+    width: 100%;
     .intro {
       padding: 1%;
-      h1 {
+      h2 {
+        padding-left: 8rem;
         padding-top: 1%;
         padding-bottom: 1%;
       }
@@ -23,7 +26,7 @@
     }
    
     .text-content {
-      width: 48%;
+      width: 60%;
       padding: 1%;
       @media @mobile {
         width: 90%;
