--- a/less/variables.less
+++ b/less/variables.less
@@ -1,20 +1,18 @@
 // Color assignments 
 @font-color: @shark;
-@button-bg: @eastern-blue;
+@button-bg: @mid;
 @main-bg:  @white;
 @nav-color: @white;
 @link-color: @darkgreen;
 @navigation-border: @silver;
-@footer-bg: @sandy-beach;
 @button-link: @white;
 @border-color: @shark;
 
 // Colors
-@white: #FFFFFF;
-@silver: #C0C0C0;
-@shark: #212529;
+@white: #9bacb6;
+@silver: #e5dcd2;
+@shark: #0f1817;
 @eastern-blue: #17A2B8;
-@sandy-beach: #FFEBCD;
 @orange: #ffa34d;
 @red: #f67575;
 @light: #d4d8a8;
