--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,8 +1,13 @@
 $bg-color: #282c34;
-$white: rgb(180, 180, 201);
+$white: #b4b4c9;
+$text-primary: #b2c2e2;
+$text-secondary: #ddd;
+$bg-primary: #23232e;
+$bg-secondary: #141418;
 
 html {
     font-size: 62.5%;
+    color: $text-secondary;
     width: 100%;
     height: 100%;
     background-image: 
@@ -11,12 +16,19 @@ html {
     linear-gradient($bg-color, darken($bg-color, 40%));
 
     body {
-
-        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
+        
+        .nav {
+            color: $text-primary;
+            background-color: $bg-primary;
+        }
     
     footer {
         font-size: 1.6rem;
