--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -8,26 +8,46 @@ $bg-secondary: #141418;
 html {
     font-size: 62.5%;
     color: $text-secondary;
-    width: 100%;
-    height: 100%;
+    margin: 0;
+    padding: 0;
     background-image: 
     radial-gradient(ellipse at 35% 40%, rgba($white, .1), transparent),
     radial-gradient(ellipse at 60% 50%, rgba($white, .1), transparent),
     linear-gradient($bg-color, darken($bg-color, 40%));
+    background-attachment: fixed;
 
+    
     body {
-        margin: 0;
-        padding: 0;
+
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
+        &::-webkit-scrollbar {
+            width: .25rem;
+        }
+        &::-webkit-scrollbar-track {
+            background: #1e1e24;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #2222d3;
+        }
+        .App {
+            width: 100%;
+            height: 100%;
+        }
         
-        .nav {
+        
+        .navbar {
             color: $text-primary;
             background-color: $bg-primary;
+        }
+
+        main {
+            font-size: 1.8rem;
+            margin-left: 8rem;
         }
     
     footer {
