--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -18,13 +18,9 @@ html {
 
     
     body {
-
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
+
         &::-webkit-scrollbar {
             width: .25rem;
         }
@@ -32,17 +28,49 @@ html {
             background: #1e1e24;
         }
         &::-webkit-scrollbar-thumb {
-            background: #2222d3;
+            background: #22bed3;
         }
         .App {
             width: 100%;
             height: 100%;
+
         }
         
-        
         .navbar {
+            width: 8rem;
+            height: 100vh;
             color: $text-primary;
             background-color: $bg-primary;
+
+            .navbar-nav {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                height: 100%;
+
+            }
+            .nav-item {
+                width: 100%;
+
+
+                &:last-child {
+                    margin-top: auto;
+                }
+            }
+            .nav-link {
+                display: flex;
+                align-items: center;
+                height: 8rem;
+                color: $text-primary;
+                text-decoration: none;
+            }
+            .link-text {
+                display: none;
+                margin-left: 1rem;
+            }
         }
 
         main {
