--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -72,14 +72,15 @@ html {
 
                 bottom: 0;
                 width: 100vw;
-                height: 6rem;
+                height: 8rem;
+                .navbar-nav {
+                    flex-direction: row;
+                }
 
                 .ea-icon-logo {
                     display: none;
                 }
-                .logo {
-                    display: none;
-                }
+
 
             }
             @include mid-view() {
@@ -147,11 +148,20 @@ html {
                 flex-direction: column;
                 align-items: center;
                 height: 100%;
+                
+                @include phone-view(){
+                    flex-direction: row;
+                    justify-content: space-around;
+                    
+                }
+                
 
 
                 .nav-item {
                     width: 100%;
-
+                    @include phone-view(){
+                        width: 8rem;
+                    }
                     &:last-child {
                         margin-top: auto;
 
@@ -189,6 +199,11 @@ html {
                             min-width: 4rem;
                             margin: 0 2rem;
 
+                            @include phone-view(){
+                                min-width: 6rem;
+                                margin: 0 2rem;
+                            }
+
                             .ea-base {
                                 color: $icon-primary;
                             }
@@ -213,7 +228,9 @@ html {
         font-size: 1.8rem;
         margin-top: 0;
         margin-left: 8rem;
-
+        @include phone-view(){
+            margin: 1rem;
+        }
         h1 {
             margin-top: 0;
         }
