--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,11 +2,20 @@ main {
     font-size: 1.8rem;
     margin-top: 0;
     margin-left: 8rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
 
     @include phone-view() {
         margin: 1rem;
     }
-
+    .splash {
+        margin: 2rem;
+        padding: 3rem;
+        border: 2rem solid #ddd;
+        background-image: linear-gradient(rgba(#ddd, .1), rgba(#333, .1));
+        border-radius: 25px;
+    }
     h1 {
         margin-top: 0;
     }
