--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 
-main {
+.main {
     font-size: 1.8rem;
     margin-top: 0;
     margin-left: 8rem;
@@ -15,7 +15,7 @@ main {
         padding: 3rem;
         border: 2rem solid #ddd;
         background-image: linear-gradient(rgba(#ddd, .1), rgba(#333, .1));
-        border-radius: 25px;
+        border-radius: 5rem;
     }
     h1 {
         margin-top: 0;
