--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -31,8 +31,12 @@ body {
 }
 
 .App {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    @include phone-view() {
+        margin-bottom: 1rem;
+
+    }
 }
 
 .navbar {
