--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,10 +13,13 @@
     }
     .splash {
         margin: 2rem;
-        padding: 3rem;
-        border: 2rem solid #ddd;
-        background-image: linear-gradient(rgba(#ddd, .1), rgba(#333, .1));
+        padding: 5rem;
+        border: 5rem solid transparent;
+        border-image: url(../svg/border.svg) 15% stretch;
         border-radius: 5rem;
+    }
+    .border-img{
+        color: red;
     }
     h1 {
         margin-top: 0;
