--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,7 @@
 /* Color Variables */
 $bg-color: #282c34;
 $white: #b4b4c9;
+$black: #123;
 $text-primary: #b2c2e2;
 $text-secondary: #ddd;
 $bg-primary: #23232e;
