--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,16 +12,49 @@
 
     }
     .splash {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        width: 100%;
         margin: 2rem;
         padding: 5rem;
-        border: 5rem solid transparent;
-        border-image: url(../svg/border.svg) 15% stretch;
+        border: 2rem solid transparent;
+        border-image: url(../svg/border-light.svg) 15% stretch;
+        background-color: #abc;
         border-radius: 5rem;
-    }
-    .border-img{
-        color: red;
-    }
-    h1 {
-        margin-top: 0;
+        min-width: 60vw;
+        box-shadow: 7px 10px 23px -6px rgba(0,0,0,0.75);
+        @include phone-view{
+            flex-direction: column-reverse;
+        }
+        .logo-text {
+            z-index: -100;
+            transform: rotate(-5deg);
+            width: 28rem;
+            height: 10rem;
+            background-image: url(../svg/logo-backing.svg);
+            background-size: cover;
+
+
+        }
+        h1 {
+            padding: 3.2rem;
+            font-size: 3.8rem;
+            color: #abc;
+        }
+        h2 {
+            padding-top: 2rem;
+            color: #234;
+        }
+        .profile {
+            margin: 3rem;
+            border-radius: 3rem;
+            border: 10px white solid;
+            max-width: 20rem;
+            max-width: 20rem;
+            min-width: 10rem;
+            min-height: 10rem;
+            background-image: radial-gradient(black, transparent);
+        }
     }
 }
