--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -41,7 +41,7 @@ body {
 
 .navbar {
     position: fixed;
-
+    z-index: 100;
     width: 8rem;
     height: 100vh;
     color: $text-primary;
@@ -76,6 +76,7 @@ body {
             transition: $speed;
 
             .link-text {
+                display: block;
                 opacity: 1;
                 transition: $speed;
 
@@ -99,6 +100,7 @@ body {
     }
 
     .link-text {
+        display: none;
         opacity: 0;
         transition: $speed;
         font-size: 1.6rem;
