--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
     .splash {
         display: flex;
         flex-direction: row-reverse;
+        align-items: center;
         justify-content: space-around;
         width: 100%;
         margin: 2rem;
@@ -28,7 +29,7 @@
             flex-direction: column-reverse;
         }
         .logo-text {
-            z-index: -100;
+            z-index: 0;
             transform: rotate(-5deg);
             width: 28rem;
             height: 10rem;
@@ -49,12 +50,11 @@
         .profile {
             margin: 3rem;
             border-radius: 3rem;
-            border: 10px white solid;
-            max-width: 20rem;
-            max-width: 20rem;
-            min-width: 10rem;
-            min-height: 10rem;
-            background-image: radial-gradient(black, transparent);
+            border: 10px #ddd solid;
+            min-width: 18rem;
+            height: 20rem;
+            background-image: radial-gradient(ellipse at top, rgba($black, .45), transparent),
+            linear-gradient(transparent, rgba($black, .4));
         }
     }
 }
