--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -4,6 +4,7 @@
     margin: 3rem;
     border: 1.6rem solid transparent;
     border-image: url(../svg/project-border-bg.svg) 15% stretch;
+    box-shadow: 3px 4px 12px 6px $black;
 }
 .project-item {
 
@@ -32,10 +33,24 @@
     padding: 2rem;
     min-width: 8rem;
     min-height: 8rem;
-    background-image: linear-gradient(rgba(133, 18, 18, 0.5), rgba(0, 77, 150, 0.5));
-    border-radius: 3rem;
+    background-position-x:-40px;
+    background-position-y:-80px;
+    background-size: 800px;
+    transition: 3s;
+    border: 1rem solid transparent;
+    border-image: url(../svg/border-inner.svg) 25% stretch;
+
+    &:hover{
+        transition: 3s;
+        background-position-x:-60px;
+        background-position-y:-60px;
+        background-size: 550px;
+    }
+
     @include phone-view(){
         height: 16rem;
+
+
     }
 }
 .project a{
